--- a/liyuxuan.html
+++ b/liyuxuan.html
@@ -39,7 +39,7 @@
     <script>
         const messages = [
             "我是李雨轩兄弟熊雅媛", "我是李雨轩兄弟熊雅媛", "我是李雨轩兄弟熊雅媛",
-            "我是李雨轩兄弟熊雅媛", "我是李雨轩兄弟熊雅媛",
+            "我喜欢李雨轩", "我喜欢李雨轩","李雨轩兄弟是熊雅媛",
             "我是李雨轩兄弟熊雅媛", "我是李雨轩兄弟熊雅媛", "我是李雨轩兄弟熊雅媛"
         ];
 
