--- a/baojiayu.html
+++ b/baojiayu.html
@@ -29,7 +29,7 @@
             transform: scale(1);
         }
         .message::before {
-            content: "🤩 ";
+            content: "🥰 ";
             color: #ff1493;
             font-size: 11px;
         }
