--- a/ya.html
+++ b/ya.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>图片+文字混合弹幕（本地图片HTTP访问版）</title>
+    <title>图片+文字混合弹幕（GitHub版）</title>
     <style>
         .danmu-container {
             position: fixed;
@@ -14,15 +14,15 @@
             background: #f5f5f5;
             z-index: 999;
         }
-        /* 图片弹幕样式（保留原有配置，可按需调整尺寸） */
+        /* 图片弹幕样式（可按需调整尺寸） */
         .image-danmu {
             position: absolute;
-            height: 400px; /* 可修改为你想要的尺寸，如100px */
+            height: 400px; /* 调整为合适尺寸，避免过大 */
             width: auto;
             animation: danmuScroll linear infinite;
             opacity: 0.9;
         }
-        /* 文字弹幕样式（完全保留原有配置） */
+        /* 文字弹幕样式 */
         .text-danmu {
             position: absolute;
             height: auto;
@@ -34,7 +34,7 @@
             white-space: nowrap;
             animation: danmuScroll linear infinite;
         }
-        /* 滚动动画（共用） */
+        /* 滚动动画 */
         @keyframes danmuScroll {
             from { transform: translateX(100vw); }
             to { transform: translateX(-100%); }
@@ -45,10 +45,10 @@
     <div class="danmu-container" id="danmuContainer"></div>
 
     <script>
-        // 全局配置（核心修改：图片路径改为本地服务器相对路径）
+        // 关键修改：图片路径改为GitHub仓库的相对路径
         const config = {
             image: {
-                url: "/hhh/images/wx.jpg", // 本地服务器下的路径，无需写localhost
+                url: "images/wx.jpg", // 与仓库结构一致：根目录/images/wx.jpg
                 speed: 8,
                 interval: 3000,
                 maxCount: 5,
@@ -69,7 +69,6 @@
         let imageDanmuCount = 0;
         let textDanmuCount = 0;
 
-        // 创建图片弹幕（保留原有逻辑）
         function createImageDanmu() {
             if (imageDanmuCount >= config.image.maxCount) return;
             const danmu = document.createElement("img");
@@ -85,7 +84,6 @@
             imageDanmuCount++;
         }
 
-        // 创建文字弹幕（保留原有逻辑）
         function createTextDanmu() {
             if (textDanmuCount >= config.text.maxCount) return;
             const danmu = document.createElement("div");
@@ -106,7 +104,6 @@
             textDanmuCount++;
         }
 
-        // 定时生成弹幕（保留原有逻辑）
         setInterval(createImageDanmu, config.image.interval);
         setInterval(createTextDanmu, config.text.interval);
         createImageDanmu();
